--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Bill_Genrating_App</string>
-    <string name="invices">Invoices</string>
+    <string name="invoices">Invoices</string>
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
