color pallate changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Bill_Genrating_App</string>
     <string name="invoices">Invoices</string>
     <string name="item_lists">Item Lists</string>
+    <string name="recents_transaction">Recents Transaction</string>
     <!-- TODO: Remove or change this placeholder text -->
 
     <string-array name="Catogory">
