--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
         <item>Stationary</item>
         <item>Others</item>
     </string-array>
+
+    <array name="auto_size_textsizes">
+        <item>10sp</item>
+        <item>12sp</item>
+        <item>20sp</item>
+        <item>40sp</item>
+        <item>100sp</item>
+    </array>
 </resources>
