--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,14 @@
         <item>40sp</item>
         <item>100sp</item>
     </array>
+
+<!--    <string name="app_name">Bill_Genrating_App</string>-->
+    <string name="app_logo">App Logo</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign Up</string>
+
 </resources>
